# AniMeGUI

./: .gitignore  README.md  com.github.izzthedude.AniMeGUI.json  io.github.izzthedude.AniMeGUI.json  meson.build
animegui/: animegui.in  app.py  enums.py  meson.build  presets.py
animegui/animepy/: cli.py  data.py  dbus.py  wrapper.py
animegui/controllers/: controller_app.py  controller_base.py  controller_general.py  controller_live.py  controller_presets.py
animegui/ui/: __init__.py  view_base.py  view_page_base.py  view_page_general.py  view_page_live.py  view_page_presets.py  window_app.py
animegui/utils/: gi_helpers.py  task.py
animegui/widgets/: action_rows.py  rows.py
data/: com.github.izzthedude.AniMeGUI.appdata.xml.in  com.github.izzthedude.AniMeGUI.desktop.in  com.github.izzthedude.AniMeGUI.gresource.xml  com.github.izzthedude.AniMeGUI.gschema.xml  io.github.izzthedude.AniMeGUI.appdata.xml.in  io.github.izzthedude.AniMeGUI.desktop.in  io.github.izzthedude.AniMeGUI.gresource.xml  io.github.izzthedude.AniMeGUI.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: help_overlay.ui  view_page_general.ui  view_page_live.ui  view_page_presets.ui  window_app.ui
po/: POTFILES  meson.build
src/: animegui.gresource.xml  animegui.in  main.py  meson.build  window.py  window.ui
